--- a/package.json
+++ b/package.json
@@ -2,17 +2,23 @@
   "name": "ericpak.me",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ericpak.github.io/ericpak.me/",
   "dependencies": {
+    "classnames": "^2.2.6",
     "firebase": "^4.11.0",
+    "gh-pages": "^1.2.0",
     "react": "^16.2.0",
     "react-color": "^2.14.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
